format keyId and fix Build errors
Signed-off-by: KiranSatyaRaj <kiranjamy20021508@gmail.com>